Added One Full Profile Card

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                                     <img src="./images/3.jpg" alt="person" class="img-fluid">
                                 </div>
                                 <div class="card__text">
-                                    <h4>Leonardo Asante</h4>
-                                    <h5>PHP Developer</h5>
+                                    <h4>Solomon McBryan</h4>
+                                    <h5>React Developer</h5>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                                 </div>
                                 <div class="card__button">
-                                    <button class="btn  shadow .bg-danger ">View Profile</button>
+                                    <a href="./components/profile1.html">View Profile</a>
                                 </div>
                                 <div class="card__ruler"></div>
                                 <div class="social_icons text-center">
@@ -93,7 +93,7 @@
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                                 </div>
                                 <div class="card__button">
-                                    <button class="btn  shadow .bg-danger ">View Profile</button>
+                                    <a href="">View Profile</a>
                                 </div>
                                 <div class="card__ruler"></div>
                                 <div class="social_icons text-center">
@@ -115,11 +115,11 @@
                                 </div>
                                 <div class="card__text">
                                     <h4>Julio Caesar</h4>
-                                    <h5>Mobile Apps Developer</h5>
+                                    <h5>Mobile App Developer</h5>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                                 </div>
                                 <div class="card__button">
-                                    <button class="btn  shadow .bg-danger ">View Profile</button>
+                                    <a href="">View Profile</a>
                                 </div>
                                 <div class="card__ruler"></div>
                                 <div class="social_icons text-center">
@@ -145,7 +145,7 @@
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                                 </div>
                                 <div class="card__button">
-                                    <button class="btn  shadow .bg-danger ">View Profile</button>
+                                    <a href="">View Profile</a>
                                 </div>
                                 <div class="card__ruler"></div>
                                 <div class="social_icons text-center">
@@ -162,7 +162,7 @@
 
                     <!-------------------- Right Column Cards -------------->
                     <div class="row cards">
-                        <!-------------------- Right Column Card One -------------->
+                        <!-------------------- Right Column Card Five -------------->
                        <div class="col-md-3">
                            <div class="card text-center shadow p-3 mb-5 bg-white rounded">
                                <div class="card__image">
@@ -174,7 +174,7 @@
                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                                </div>
                                <div class="card__button">
-                                   <button class="btn  shadow .bg-danger ">View Profile</button>
+                                <a href="">View Profile</a>
                                </div>
                                <div class="card__ruler"></div>
                                <div class="social_icons text-center">
