--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-------------------- Styles -------------->
     <link rel="stylesheet" href="./style.css">
 
-    <script src="./assets/js/main.js"></script>
-    <title>Project Two</title>
+    <script src="./main.js"></script>
+    <title>Creator Home Profile Info</title>
 </head>
 
 <body>
@@ -24,10 +24,8 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            
-                <input type="text" id="myFilter" class="form-control" onkeyup="myFunction()" placeholder="Search for names..">
-                
+        <div class="collapse navbar-collapse ml-7" id="navbarSupportedContent">
+            <input type="text" class="form-control filter" placeholder="Search for names..">
         </div>
     </nav>
 
@@ -55,15 +53,16 @@
                     </div>
 
                     <!-------------------- Right Column Cards -------------->
-                    <div class="row cards" id="myItems">
+                    <div class="row cards">
                         <!-------------------- Right Column Card One -------------->
                         <div class="col-md-3">
-                            <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+                            <div class="card text-center shadow p-3 mb-5 bg-white rounded "
+                                data-string="Solomon McBryan">
                                 <div class="card__image">
                                     <img src="./images/3.jpg" alt="person" class="img-fluid">
                                 </div>
                                 <div class="card__text">
-                                    <h4>Solomon McBryan</h4>
+                                    <h4 class="card-titile">Solomon McBryan</h4>
                                     <h5>React Developer</h5>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                                 </div>
@@ -84,7 +83,7 @@
 
                         <!-------------------- Right Column Card Two -------------->
                         <div class="col-md-3">
-                            <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+                            <div class="card text-center shadow p-3 mb-5 bg-white rounded" data-string="Alberta Singh">
                                 <div class="card__image">
                                     <img src="./images/1.jpg" alt="person" class="img-fluid">
                                 </div>
@@ -110,7 +109,7 @@
 
                         <!-------------------- Right Column Card Three -------------->
                         <div class="col-md-3">
-                            <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+                            <div class="card text-center shadow p-3 mb-5 bg-white rounded" data-string="Julio Caesar">
                                 <div class="card__image">
                                     <img src="./images/4.jpg" alt="person" class="img-fluid">
                                 </div>
@@ -136,7 +135,7 @@
 
                         <!-------------------- Right Column Card Four -------------->
                         <div class="col-md-3">
-                            <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+                            <div class="card text-center shadow p-3 mb-5 bg-white rounded" data-string="Milla Jovovich">
                                 <div class="card__image">
                                     <img src="./images/5.jpg" alt="person" class="img-fluid">
                                 </div>
@@ -162,10 +161,10 @@
                     </div>
 
                     <!-------------------- Right Column Cards -------------->
-                    <div class="row cards">
+                    <div class="row cards" id="myCARDS">
                         <!-------------------- Right Column Card Five -------------->
                         <div class="col-md-3">
-                            <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+                            <div class="card text-center shadow p-3 mb-5 bg-white rounded" data-string="Ariana Grande">
                                 <div class="card__image">
                                     <img src="./images/2.jpg" alt="person" class="img-fluid">
                                 </div>
@@ -204,23 +203,21 @@
     <!--------------------- Bootstrap & JQuery  -------------------->
     <script src="./assets/js/jquery-3.4.1.min.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
+
     <script>
-        function myFunction() {
-            var input, filter, cards, cardContainer, h4, title, i;
-            input = document.getElementById("myFilter");
-            filter = input.value.toUpperCase();
-            cardContainer = document.getElementById("myItems");
-            cards = cardContainer.getElementsByClassName("card");
-            for (i = 0; i < cards.length; i++) {
-                title = cards[i].querySelector(".card-body h5.card-title");
-                if (title.innerText.toUpperCase().indexOf(filter) > -1) {
-                    cards[i].style.display = "";
+        $(".filter").on("keyup", function () {
+            var input = $(this).val().toUpperCase();
+            $(".card").each(function () {
+                if ($(this).data("string").toUpperCase().indexOf(input) < 0) {
+                    $(this).hide();
                 } else {
-                    cards[i].style.display = "none";
+                    $(this).show();
                 }
-            }
-        }
+            })
+        });
     </script>
+
 </body>
 
 </html>
